WIP: implement original complete bag-demand remediation